--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,11 @@
   font-size: 35px;
 }
 
+.icon-edit {
+  width: 20px;
+  margin-left: 10px;
+}
+
 td, th {
   vertical-align: middle !important;
   text-align: center !important;
